refactored some switch statements